--- a/.github/workflows/VersionTest.yml
+++ b/.github/workflows/VersionTest.yml
@@ -12,6 +12,8 @@ jobs:
     steps:
       - name: Checkout Primary repo
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
       - name: get version
         run: | 
           git describe --tags --abbrev=0
